# TimeLapse

./: .gitignore  CMakeLists.txt  README.md
images/: STAY CLOSE TO ANYTHING THAT MAKES YOU GLAD YOU ARE ALIVE..gif:Zone.Identifier
include/: a.out  main.cpp  test.cpp  timelaspe.cpp
include/Image/: Image.cpp  Image.h  param.txt
include/color/: color.hpp
include/filter/: color.hpp  features  filter.cpp  filter.hpp  sharpness.cpp
include/utils/: driver.hpp  file_handler.hpp  misc.hpp  path_finder.hpp
src/: main.cpp
